ТЗ-6: выполнены все требования задания